kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-service
  namespace: employee-service
  labels:
    app: employee-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: employee-service
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: employee-service
          image: janvi0612/employee-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 3
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
